# MinecraftDangerEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
Addon/: MyAddon.json  logs.txt
Addon/src/: AddonMain.cpp
AdventureKraft/: AdventureKraft.json  CMakeLists.txt
AdventureKraft/src/: AdventureKraft.cpp
DangerEngine/: CMakeLists.txt
DangerEngine/include/DangerEngine/: Addon.h  Build.h  Core.h  DangerEngine.h  JSON.h  Log.h  UUID.h
DangerEngine/include/DangerEngine/Minecraft/: BehaviourPack.h  Lang.h  Manifest.h  ResourcePack.h  Sound.h  Sounds.h
DangerEngine/src/: Addon.cpp  Addon.h  BehaviourPack.cpp  BehaviourPack.h  Build.cpp  Build.h  Core.h  DangerEngine.cpp  DangerEngine.h  Dll.h  JSON.h  Log.cpp  Log.h  ResourcePack.cpp  UUID.cpp  UUID.h
DangerEngine/src/Minecraft/: BehaviourPack.cpp  BehaviourPack.h  Lang.cpp  Lang.h  Manifest.cpp  Manifest.h  ResourcePack.cpp  ResourcePack.h  Sound.cpp  Sounds.cpp
ExampleAddon/: Example Addon.json
ExampleAddon/src/: AddonMain.cpp
