cmake_minimum_required(VERSION 3.8)

project(DangerEngine)

add_compile_definitions(BUILD_DLL)

file(GLOB_RECURSE CPP_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE H_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")

set(SOURCES ${CPP_FILES})

set(HEADERS ${H_FILES})

add_library(${PROJECT_NAME} SHARED ${SOURCES} ${HEADERS})

set_property(TARGET "${PROJECT_NAME}" PROPERTY CXX_STANDARD 17)

set_target_properties(${PROJECT_NAME} PROPERTIES 
    OUTPUT_NAME ${PROJECT_NAME}
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/${PROJECT_NAME}"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/${PROJECT_NAME}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../bin/${PROJECT_NAME}"
)

set(DLL_DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}/../bin/AdventureKraft")

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
        $<TARGET_FILE:${PROJECT_NAME}>
        ${DLL_DESTINATION}
    COMMENT "Copying DLL to ${DLL_DESTINATION}"
)

add_custom_target(CopyDLL
    DEPENDS ${PROJECT_NAME}
    COMMENT "Copying DLL to ${DLL_DESTINATION}"
)